2010-12-21  Alan Modra  <amodra@gmail.com>

	* po/ja.po: New translation.

2010-11-25  Alan Modra  <amodra@gmail.com>

	* po/bg.po: Update.
	* po/es.po: Update.

2010-11-10  Nick Clifton  <nickc@redhat.com>

	* po/ru.po: New Russian translation.

2010-11-05  Tristan Gingold  <gingold@adacore.com>

	* po/gprof.pot: Regenerate

2010-10-29  Matthias Klose  <doko@ubuntu.com>

	* gprof.texi (Deprecated Options): Move introduction out of the table.

2010-10-28  Matthias Klose  <doko@ubuntu.com>

	* gprof.texi: Add directory section for info document.

2010-09-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2010-07-16  James Blackburn  <james.blackburn@broadcom.com>

	* corefile.c (core_sym_class): Fix handling of subprogram names
	and add support for cloned function names.

2010-06-15  Doug Semler  <dougsemler@gmail.com>

	* gmon_io.c (gmon_out_read): Remove double fclose of input file.

2010-06-08  Nick Clifton  <nickc@redhat.com>

	* gprof.texi (Sampling Error): Note that call counts and basic
	block counts are only reliable for multi-threaded applications if
	the counting function itself is thread safe.

2010-06-08  Nick Clifton  <nickc@redhat.com>

	* gprof.texi: Replace abbreviated 20th century year numbers with
	full versions.

2010-05-07  Tristan Gingold  <gingold@adacore.com>

	* Makefile.in: Regenerate with automake 1.11.1.
	* aclocal.m4: Ditto.

2010-05-05  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2010-04-27  Hongsheng Zhang  <hongsheng611@gmail.com>

	PR gprof/11524
	* corefile.c (core_create_syms_from): Use correct size of buffer.

2010-04-22  Nick Clifton  <nickc@redhat.com>

	* po/gprof.pot: Updated by the Translation project.
	* po/vi.po: Updated Vietnamese translation.
	* po/bg.po: Updated Bulgarian translation.

2010-04-07  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2010-03-30  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.am (CONFIG_STATUS_DEPENDENCIES): Define.